[project]
name = "matcha-tts"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "torch",
  "torchvision",
  "lightning",
  "torchmetrics",
  "hydra-core",
  "hydra-colorlog",
  "hydra-optuna-sweeper",
  "rootutils",
  "pre-commit",
  "rich",
  "pytest",
  "phonemizer",
  "tensorboard",
  "librosa",
  "cython",
  "numpy",
  "einops",
  "inflect",
  "unidecode",
  "scipy",
  "torchaudio",
  "matplotlib",
  "pandas",
  "conformer",
  "diffusers",
  "notebook",
  "ipywidgets",
  "gradio",
  "gdown",
  "wget",
  "seaborn",
]

[build-system]
requires = ["setuptools", "wheel", "cython", "numpy", "packaging"]

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.uv]
package = false
override-dependencies = ["librosa>=0.11.0", "numba>=0.61.2"]


[tool.pytest.ini_options]
addopts = ["--color=yes", "--durations=0", "--strict-markers", "--doctest-modules"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
log_cli = true
markers = ["slow: slow tests"]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
  "pragma: nocover",
  "raise NotImplementedError",
  "raise NotImplementedError()",
  "if __name__ == .__main__.:",
]
