[project]
name = "matcha"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "torch",
  "torchvision",
  "lightning",
  "torchmetrics",
  "hydra-core",
  "hydra-colorlog",
  "hydra-optuna-sweeper",
  "rootutils",
  "pre-commit",
  "rich",
  "pytest",
  "phonemizer",
  "tensorboard",
  "librosa",
  "cython",
  "numpy",
  "einops",
  "inflect",
  "unidecode",
  "scipy",
  "torchaudio",
  "matplotlib",
  "pandas",
  "conformer",
  "diffusers",
  "notebook",
  "ipywidgets",
  "gradio",
  "gdown",
  "wget",
  "seaborn",
]

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.uv]
package = true
override-dependencies = ["librosa>=0.11.0", "numba>=0.61.2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1,<2"]

# [build-system]
# requires = ["setuptools", "wheel", "cython", "numpy", "packaging"]

[project.scripts]
matcha-data-stats = "matcha.utils.generate_data_statistics:main"
matcha-tts = "matcha.cli:cli"
matcha-tts-app = "matcha.app:main"
matcha-tts-get-durations = "matcha.utils.get_durations_from_trained_model:main"

[tool.pytest.ini_options]
addopts = ["--color=yes", "--durations=0", "--strict-markers", "--doctest-modules"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
log_cli = true
markers = ["slow: slow tests"]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
  "pragma: nocover",
  "raise NotImplementedError",
  "raise NotImplementedError()",
  "if __name__ == .__main__.:",
]
